utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_with_self_reference.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "id": {
      "type": "string"
    },
    "previous": {
      "$ref": "#/components/schemas/Item"
    }
  },
  "required": [
    "id",
    "previous"
  ],
  "type": "object"
}
