utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_with_title.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "id": {
      "format": "int64",
      "type": "integer"
    }
  },
  "required": [
    "id"
  ],
  "title": "Post",
  "type": "object"
}
