utoipa-gen/tests/snapshots/schema_derive_test__derive_struct_with_vec_field_with_example.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: post
snapshot_kind: text
---
{
  "properties": {
    "id": {
      "format": "int32",
      "type": "integer"
    },
    "value": {
      "example": [
        "foobar",
        "barfoo"
      ],
      "items": {
        "type": "string"
      },
      "type": "array"
    }
  },
  "required": [
    "id",
    "value"
  ],
  "type": "object"
}
