utoipa-gen/tests/snapshots/schema_derive_test__derive_tuple_named_struct_field.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "info": {
      "items": false,
      "prefixItems": [
        {
          "type": "string"
        },
        {
          "format": "int64",
          "type": "integer"
        },
        {
          "type": "boolean"
        },
        {
          "properties": {
            "name": {
              "type": "string"
            }
          },
          "required": [
            "name"
          ],
          "type": "object"
        }
      ],
      "type": "array"
    }
  },
  "required": [
    "info"
  ],
  "type": "object"
}
