utoipa-gen/tests/snapshots/schema_derive_test__derive_unit_struct_schema.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "default": null
}
