utoipa-gen/tests/snapshots/schema_derive_test__derive_unit_type.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: data
snapshot_kind: text
---
{
  "properties": {
    "unit_type": {
      "default": null
    }
  },
  "required": [
    "unit_type"
  ],
  "type": "object"
}
