utoipa-gen/tests/snapshots/schema_derive_test__derive_unit_type_untagged_enum.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "$ref": "#/components/schemas/AggregationRequest"
    },
    {
      "default": null,
      "type": "null"
    }
  ]
}
