utoipa-gen/tests/snapshots/schema_derive_test__derive_unit_variants_serde_mix_skip_untagged.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "oneOf": [
    {
      "enum": [
        "NormalOne"
      ],
      "type": "string"
    },
    {
      "default": null,
      "type": "null"
    },
    {
      "default": null,
      "type": "null"
    }
  ]
}
