utoipa-gen/tests/snapshots/schema_derive_test__derive_unit_variants_serde_partially_untagged.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "oneOf": [
    {
      "enum": [
        "TaggedOne"
      ],
      "type": "string"
    },
    {
      "default": null,
      "type": "null"
    }
  ]
}
