utoipa-gen/tests/snapshots/schema_derive_test__derive_unit_variants_serde_skip_non_unit.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "enum": [
    "One",
    "Two"
  ],
  "type": "string"
}
