utoipa-gen/tests/snapshots/schema_derive_test__derive_unnamed_struct_with_description_override.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "description": "This is description from include_str!\n",
  "type": "string"
}
